# rea-playspace

./: .gitignore  pnpm-lock.yaml
happ/workdir/: happ.yaml
happ/zomes/profiles/: Cargo.toml
happ/zomes/profiles_core/: Cargo.toml
happ/zomes/projects_core/: Cargo.toml
ui/: package.json
